replaced new Number(Number) with Number.instanceOf to remove deprecation warnings for Java 9